# bench-dek

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ROADMAP.md
components/: README.md
docs/: ROADMAP.md  architecture.md  host-software.md  module-interface.md  uart-vertical-slice-roadmap.md  vision.md
docs/capabilities/: uart-stream.md
docs/decisions/: 0001-layered-host-architecture.md  0002-capability-first-module-contract.md  0003-v1-module-transport.md  0004-standardize-control-plane-and-capability-commands.md  README.md
docs/sketches/: README.md
firmware/: CMakeLists.txt  README.md  main.c
firmware/host/: README.md  app_main.c  app_main.h
firmware/host/applications/: README.md  spi_smoke_app.c  spi_smoke_app.h  uart_smoke_app.c  uart_smoke_app.h
firmware/host/bringup/: README.md  dev_runtime.c  dev_runtime.h
firmware/host/bringup/smoke/: README.md  spi_smoke_app.c  spi_smoke_app.h  uart_smoke_app.c  uart_smoke_app.h
firmware/host/core/: README.md  bootstrap.c  bootstrap.h
firmware/host/module-drivers/: README.md
firmware/host/module-manager/: README.md  capability_types.h  module_registry.c  module_registry.h  service_instance.c  service_instance.h
firmware/host/service-api/: README.md  service_api.c  service_api.h
firmware/host/service-api/service-registry/: service-registry.c  service-registry.h
firmware/host/service-api/services/: README.md  services.h
firmware/host/service-api/services/service-gpio/: service-gpio.c  service-gpio.h
firmware/host/tests/: README.md  module_service_unit_test.c  module_service_unit_test.h
firmware/host/transport/: README.md  dek_crc.c  dek_crc.h  dek_message.h  dek_packet.c  dek_packet.h  dek_transport.c  dek_transport.h
firmware/host/transport/messages/: dek_hello.c  dek_hello.h
firmware/host/ui/: README.md
firmware/modules/: README.md
main/: main.c
